--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Reduxstagram</title>
+    <link rel="stylesheet" href="https://npmcdn.com/antd/dist/antd.css">
     <link rel="shortcut icon" type="image/png" href="http://wes.io/ehRe/my-favourite-icon.png"/>
 
   </head>
