--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Reduxstagram</title>
+    <title>LilTwitter</title>
     <link rel="stylesheet" href="https://npmcdn.com/antd/dist/antd.css">
     <link rel="shortcut icon" type="image/png" href="http://wes.io/ehRe/my-favourite-icon.png"/>
 
